Cleanup some deprecated / unused code